[tool.poetry]
name = "finrl"
version = "0.3.6"

description = "FinRL: Financial Reinforcement Learning Framework. Version 0.3.5 notes: stable version, code refactoring, more tutorials, clear documentation"
authors = ["Hongyang Yang, Xiaoyang Liu"]
license = "MIT"

readme = "README.md"
classifiers=[
        # Trove classifiers
        # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
    ]
keywords=["Reinforcement Learning", "Finance"]
[tool.poetry.urls]
github = "https://github.com/finrl/finrl-library"

[tool.poetry.dependencies]
python = "~3.10"
exchange-calendars = "^4"
pyfolio = "^0.9"
pyportfolioopt = "^1"
scikit-learn = "^1"
stable-baselines3 = {version = ">=2.0.0a5"}
stockstats = "^0.5"
yfinance = "^0.2"
Flask = "3.0.0"
pandas = "*"

[tool.poetry.group.dev.dependencies]
black = "^23"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
